--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Forgotten People
-description: '' # write a nice description for your blog
+title: "Aylesbury's Forgotten People"
+description: "We have been forgotten by the regeneration" # write a nice description for your blog
 baseurl: '/forgotten-people' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site http://www.example.com
 # google_analytics: 'UA-XXXXXX-X'
-twitter_username: 'twitter_username'
+twitter_username: 'aylesburyalag'
 
 # Build settings
 markdown: kramdown
