--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: "Aylesbury's Forgotten People"
-description: "We have been forgotten by the regeneration" # write a nice description for your blog
+description: "The people forgotten by Blair's regeneration" # write a nice description for your blog
 baseurl: '/forgotten-people' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site http://www.example.com
 # google_analytics: 'UA-XXXXXX-X'
