--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: "Aylesbury Leaseholders"
+title: "Our Aylesbury"
 description: "The people forgotten by Blair's regeneration" # write a nice description for your blog
 baseurl: '/ouraylesbury' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site http://www.example.com
