--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site settings
 title: "Our Aylesbury"
-description: "Forced out by regeneration" # write a nice description for your blog
+description: "Saving our community" # write a nice description for your blog
 baseurl: '' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site http://www.example.com
 # google_analytics: 'UA-XXXXXX-X'
-twitter_username: ''
+twitter_username: 'ouraylesbury'
 
 # Build settings
 markdown: kramdown
