--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@
 # Site settings
 title: "Our Aylesbury"
 description: "Saving our community" # write a nice description for your blog
-baseurl: '' # the subpath of your site, e.g. /blog
-url: '' # the base hostname & protocol for your site http://www.example.com
+baseurl: '/about' # the subpath of your site, e.g. /blog
+url: 'http://ouraylesbury.org' # the base hostname & protocol for your site http://www.example.com
 # google_analytics: 'UA-XXXXXX-X'
 twitter_username: 'ouraylesbury'
 
